<resources>
    <string name="app_name">RestaurantApp</string>

    <string name="titel">Welkom bij de restaurant app!</string>
    <string name="radius">Geef het gewenste bereik in:</string>
    <string name="action_settings">Settings</string>
    <string name="radiusAmount">3</string>
    <string name="radiusEdit">3</string>
    <string name="title_activity_google">GoogleActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="getRestaurantsButton">Zoek restaurants</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="item_name">Restaurant</string>
    <string name="item_vicinity">Belgie</string>
    <string name="items_title">RestaurantApp</string>
    <string name="item_latitude">Latitude</string>
    <string name="item_longitude">Longitude</string>
    <string name="title_activity_Items">Restaurants</string>
    <string name="showLocationButton">Show my location</string>
    <string name="afstandTextView">km</string>

    <string name="travel_title">Vervoersmethode</string>
    <string name="travel_summary">Hier kan u de vervoersmethode aanpassen voor de routebeschrijving</string>
    <string-array name="travel_keys">
        <item>Te voet</item>
        <item>Met de fiets</item>
        <item>Met de auto</item>
    </string-array>
    <string-array name="travel_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="travel_default">0</string>
</resources>
