<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/titelTextView"
        android:text="@string/titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/radiusTextView"
        android:text="@string/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titelTextView"
        android:layout_alignLeft="@+id/titelTextView"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/radiusSeekBar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="3"
        android:layout_alignBottom="@+id/radiusEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/radiusEditText"
        android:text="@string/radiusEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/radiusTextView"
        android:layout_toRightOf="@+id/radiusSeekBar"
        android:layout_toEndOf="@+id/radiusSeekBar" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/radiusSeekBar"
        android:layout_alignLeft="@+id/radiusSeekBar"
        android:text="@string/testButton"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/showYourLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/radiusSeekBar"
        android:layout_toRightOf="@+id/testButton"
        android:text="@string/showLocationButton"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/longitudeTestView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/testButton"
        android:layout_alignLeft="@+id/testButton"
        android:text=""/>

    <TextView
        android:id="@+id/latitudeTestView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/testButton"
        android:layout_toRightOf="@+id/longitudeTestView"
        android:text=""/>

</RelativeLayout>
